deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $key1
  namespace: default
  labels:
    app: $key1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $key1
  template:
    metadata:
      labels:
        app: $key1
    spec:
      containers:
      - name: $key1
        image: splunk/splunk:latest
        imagePullPolicy: IfNotPresent
        # env:
        #   - name: version
        #     value: 1.0
        ports:
        - containerPort: 8000
          protocol: TCP
        - containerPort: 8191 
          protocol: TCP
        - containerPort: 9997
          protocol: TCP
        resources:
         requests:
           cpu: "500m"
      volumes:
      - name: $key1      
        persistentVolumeClaim:
          claimName: $key1-pvc
