hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls: 
  - hosts:
    - hello-first.dashboard-lim.io
    - $key1.dashboard-lim.io
    secretName: hello-kubernetes-tls 
  rules:
  - host: "$key1.dashboard-lim.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: $key1
            port:
              number: 8000
